Fix download problem

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<li><a href="">Home</a></li>
 							<li><a href="#blogposts">Blog posts</a></li>
 							<li><a href="#hiring">We're hiring</a></li>
-                            <li><a href="staff">Staff</a></li>
+                            <li><a href="staff.html">Staff</a></li>
 							<li><a href="#contact">Contact us</a></li>
                             <li><a href="#">Back to top</a></li>
 						</ul>
@@ -71,7 +71,7 @@
 										<img src="images/discordblog.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="blog#discord" class="link">Discord</a></h3>
+										<h3><a href="blog.html#discord" class="link">Discord</a></h3>
 										<p>We have a Discord server!</p>
 									</header>
 								</article>
@@ -80,7 +80,7 @@
 										<img src="images/grabtreasure.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="blog#piratesmadness" class="link">Pirates Madness</a></h3>
+										<h3><a href="blog.html#piratesmadness" class="link">Pirates Madness</a></h3>
 										<p>Our new unique minigame!</p>
 									</header>
 							</section>
