--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
 									<p>Check out our Discord server!</p>
 									<p>The Discord is one of the the many ways you can contact us. There, you can chat with other players, get the latest news, contact staff, and ask for help regarding Cytale! So what are you waiting for? Join the server using the invite below, and enjoy your stay :)</p>
 								<ul class="actions">
-								<li><a href="https://discord.gg/33YGVFV" class="button special">Server invite</a></li>
+								<li><a href="index.html" class="button special">Server invite</a></li>
                                 </div>
 							</section>
                         
